@@ -1,5 +1,11 @@
 2007-05-25  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-ditem-editor.c: (panel_ditem_editor_setup_ui): always put
+	initial focus on the name entry
+	Fix part of bug #440690
+
+2007-05-25  Vincent Untz  <vuntz@gnome.org>
+
 	* gnome-desktop-item-edit.c: (main): use
 	panel_ditem_editor_new_directory() when it makes sense
 	* panel-ditem-editor.[ch]: add a new type-directory construct-only
